Fix z-index issues with tooltips and buttons

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -64,7 +64,6 @@ button {
   align-items: center;
   justify-content: center;
   border: none;
-  z-index: 2;
   font-size: 1rem;
   font-weight: bold;
   font-family: 'Comfortaa';
@@ -119,7 +118,7 @@ input:focus {
 .options {
   display: flex;
   flex-direction: column;
-  z-index: 4;
+  z-index: 1;
   position: absolute;
   overflow: scroll;
   scrollbar-width: none;
