--- a/src/styles/Item.css
+++ b/src/styles/Item.css
@@ -11,14 +11,13 @@
 }
 
 .glamour-icon {
-    z-index: 2;
     width: 1.1rem;
     height: 1.1rem;
     right: 0;
 }
 
 .tooltip {
-    z-index: 4;
+    z-index: 6;
     display: flex;
     gap: .5rem;
     left: 4rem;
